--- a/ComePennyMaster/app/build.gradle
+++ b/ComePennyMaster/app/build.gradle
@@ -8,13 +8,35 @@ android {
         applicationId "com.enterpaper.comepennymaster"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.3"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            applicationVariants.all { variant ->
+                variant.outputs.each {
+                    output ->
+                        //  def file = output.outputFile
+                        // output.outputFile = new File(file.parent,
+                        //        file.name.replace("app", "appname." + defaultConfig.versionName))
+
+                        def date = new Date();
+                        def formattedDate = date.format('yyyyMMddHHmmss')
+                        output.outputFile = new File(output.outputFile.parent,
+                                output.outputFile.name.replace("-release", "-" + formattedDate)
+                        )
+                }
+            }
+        }
+
+        debug {
+            signingConfig signingConfigs.debug
+            minifyEnabled false
+            proguardFile 'proguard-rules.txt'
+
         }
     }
 }
